--- a/src/css/components/form.scss
+++ b/src/css/components/form.scss
@@ -10,11 +10,11 @@
 		border: 1px fade-out(#fff, .6) solid;
 		background-color: transparent;
 		outline: none;
-		color: #fff;
-		font-size: .8em;
+		color: $white;
+		font-size: $text-size-small;
 		@include rounded(100em);
 		@include media('sm') {
-			font-size: 1em;
+			font-size: $text-size-normal;
 			padding: 10px 30px;
 		}
 		&--text {
