--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,4 +1,19 @@
 // Brand
+$white: #ffffff;
 $dark: #000000;
 $blue: #1E40FF;
 $pink: #ff00ff;
+
+$text-size-small: .8em;
+
+$text-size-normal: 1em;
+$text-size-normal-lg: 1.2em;
+
+$text-size-subheader: 1.4em;
+$text-size-subheader-lg: 3em;
+
+$text-size-header: 2em;
+$text-size-header-lg: 4em;
+
+$text-size-superheader: 3em;
+$text-size-superheader-lg: 10em;
