--- a/src/css/components/journey.scss
+++ b/src/css/components/journey.scss
@@ -23,7 +23,7 @@
 	}
 
 	&__title {
-		color: #fff;
+		color: $white;
 	}
 
 	&__body {
@@ -197,7 +197,7 @@
 	&__item-period-date {
 		width: 100%;
 		padding: 10px 0;
-		color: #fff;
+		color: $white;
 		border: 1px #fff solid;
 		@include font('w');
 		font-size: 1.8em;
@@ -210,7 +210,7 @@
 	}
 
 	&__item-content {
-		color: #fff;
+		color: $white;
 		width: 100%;
 		@include media('lg') {
 			width: 70%;
@@ -222,16 +222,7 @@
 	}
 
 	&__item-content a {
-		margin-top: 20px;
-		display: inline-flex;
-		@include link(#fff, #fff);
-		border: 1px #fff solid;
-		padding: 20px 40px;
-		@include rounded(20px);
-		&:hover {
-			border-color: $blue;
-			background-color: $blue;
-		}
+		@include primary-btn();
 	}
 
 }
