--- a/src/css/components/popup-menu.scss
+++ b/src/css/components/popup-menu.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 	height: 100%;
 	z-index: 8000;
-	color: #fff;
+	color: $white;
 	background: radial-gradient(farthest-corner at 20% 10%, fade-out($blue, 0) 0%, fade-out(#9a309a, 0) 80%, fade-out($pink, 0) 100%);
 	@include ease(.2s);
 	overflow-y: auto;
@@ -46,7 +46,7 @@
 
 	&__title {
 		@include font('w');
-		font-size: 1.4em;
+		font-size: $text-size-subheader;
 		line-height: 1;
 		letter-spacing: 1px;
 		text-transform: uppercase;
