--- a/src/css/components/projects.scss
+++ b/src/css/components/projects.scss
@@ -87,12 +87,12 @@
 
 	&__title {
 		@include font('w');
-		font-size: 1.2em;
+		font-size: $text-size-normal-lg;
 		line-height: 1;
 		text-transform: uppercase;
 		@include ease(.2s);
 		@include media('md') {
-			font-size: 2em;
+			font-size: $text-size-header;
 		}
 	}
 
@@ -104,9 +104,9 @@
 	}
 
 	&__desc {
-		font-size: .8em;
+		font-size: $text-size-small;
 		@include media('md') {
-			font-size: 1em;
+			font-size: $text-size-normal;
 		}
 	}
 }
@@ -121,19 +121,6 @@
 	}
 
 	&__item {
-		list-style: none;
-		margin: 0 2px 2px 0;
-		padding: 2px 8px;
-		list-style: none;
-		color: #fff;
-		background-color: $blue;
-		border: 1px transparent solid;
-		white-space: nowrap;
-		font-size: .6em;
-		@include rounded(100em);
-		@include media('md') {
-			padding: 4px 14px;
-			font-size: .8em;
-		}
+		@include tag(.6em, $text-size-small, .2em);
 	}
 }
