--- a/src/css/snippets.scss
+++ b/src/css/snippets.scss
@@ -19,7 +19,7 @@
 @mixin btn-outline(
 	$color: blue,
 	$hover: red,
-	$fontSize: 1em,
+	$fontSize: $text-size-normal,
 	$fontWeight: 500,
 	$strokeWidth: 2px,
 ) {
@@ -29,7 +29,7 @@
 	border: $strokeWidth $color solid;
 	color: $color;
 	background-color: transparent;
-	padding: .5em 1em;
+	padding: .5em $text-size-normal;
 	outline: none;
 	text-decoration: none;
 	white-space: nowrap;
@@ -37,7 +37,7 @@
 	@include rounded(10px);
 	@include ease(.1s);
 	&:hover {
-		color: #fff;
+		color: $white;
 		background-color: $hover;
 		border-color: $hover;
 	}
@@ -48,7 +48,7 @@
 	$bgColor: blue,
 	$hoverTextColor: white,
 	$hoverBgColor: red,
-	$fontSize: 1em,
+	$fontSize: $text-size-normal,
 ) {
 	width: 100%;
 	display: block;
@@ -56,7 +56,7 @@
 	border: 0;
 	color: $textColor;
 	background-color: $bgColor;
-	padding: .5em 1em;
+	padding: .5em $text-size-normal;
 	outline: none;
 	text-decoration: none;
 	white-space: nowrap;
