--- a/src/css/components/relevant-projects.scss
+++ b/src/css/components/relevant-projects.scss
@@ -93,7 +93,6 @@
 	}
 }
 .relevant-project {
-
 	width: 100%;
 	list-style: none;
 	margin-bottom: 20px;
@@ -101,63 +100,14 @@
 		width: 50%;
 		margin-bottom: 0;
 	}
-	&__layout {
-		height: 100%;
-		background-color: #fff;
-		padding: 30px;
-		margin: 0 20px;
-		box-shadow: 0 40px 100px fade-out($dark, .8);
-		@include rounded(24px);
-		@include ease(.2s);
-		@include media('lg') {
-			padding: 60px;
-		};
-	}
 
-	&__layout:hover {
-		box-shadow: 0 40px 100px fade-out($blue, .5);
-	}
-
-	&__title {
-		margin-bottom: 20px;
-		@include font('w');
-		font-size: $text-size-normal-lg;
-		line-height: 1;
-		text-transform: uppercase;
-		letter-spacing: 2px;
-		@include ease(.2s);
-		@include media('lg') {
-			font-size: 2.2em;
-		}
-	}
-
-	&__cover {
-		margin: 40px 0;
-		@include ar-16x9();
-	}
-
-	&__cover-img {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		object-fit: contain;
-	}
-
-	&__short-desc, &__short-long {
-		font-size: $text-size-small;
-		margin-bottom: 20px;
-		@include media('lg') {
-			font-size: $text-size-normal-lg;
-		}
-		p {
-			margin: 0 0 20px 0;
-		}
+	&__card {
+		@include card($text-lg: $text-size-normal-lg);
 	}
 	
 	&__short-long {
 		display: none;
+		margin-top: 0;
 	}
 
 	&__show-more {
