--- a/src/includes/projects.njk
+++ b/src/includes/projects.njk
@@ -9,16 +9,18 @@
 			<div class="projects__list">
 				{%- for project in projects -%}
 					<div class="projects__item project">
-						<a class="project__link" href="{{ project.link }}">
-							<div class="project__title">{{ project.title }}</div>
-							<div class="project__tags project-tags">
-								<ul class="project-tags__list">
-									{%- for tag in project.tags -%}
-										<li class="project-tags__item">{{ tag }}</li>
-									{%- endfor -%}
-								</ul>
+						<a class="project__card" href="{{ project.link }}">
+							<div class="project__card-title">
+								{{ project.title }}
 							</div>
-							<div class="project__desc">{{ project.desc }}</div>
+							<ul class="project__card-tags">
+								{%- for tag in project.tags -%}
+									<li class="project__tag">{{ tag }}</li>
+								{%- endfor -%}
+							</ul>
+							<div class="project__card-text">
+								{{ project.desc }}
+							</div>
 						</a>
 					</div>
 				{%- endfor -%}
